fixes #62
